feat/style: center content; create p tag component; add postcard image props

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -6,7 +6,7 @@
 
 #app {
   margin: 0 auto;
-  padding: 2rem;
+  overflow: hidden;
   font-weight: normal;
 }
 
@@ -33,6 +33,5 @@ a,
   #app {
     display: grid;
     grid-template-columns: 1fr 1fr;
-    padding: 0 2rem;
   }
 }
